[project]
name = "pybaseballstats"
version = "0.3.11"
description = "A Python package for scraping baseball data."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.11",
    "bs4>=0.0.2",
    "curl-cffi>=0.13.0",
    "dateparser>=1.2.1",
    "lxml-stubs>=0.5.1",
    "nest-asyncio>=1.6.0",
    "pandas-stubs>=2.3.2.250926",
    "polars>=1.20.0",
    "requests>=2.32.3",
    "rich>=14.0.0",
    "selenium>=4.29.0",
    "types-cffi>=1.17.0.20250915",
    "types-colorama>=0.4.15.20250801",
    "types-dateparser>=1.2.2.20250809",
    "types-decorator>=5.2.0.20250324",
    "types-gevent>=25.4.0.20250915",
    "types-html5lib>=1.1.11.20250917",
    "types-pexpect>=4.9.0.20250916",
    "types-pygments>=2.19.0.20250809",
    "types-pysocks>=1.7.1.20251001",
    "types-pytz>=2025.2.0.20250809",
    "types-requests>=2.32.4.20250913",
    "unidecode>=1.3.8",
]
authors = [{ name = "Nicolas Carbone", email = "carbone.nicolas0@gmail.com" }]
license = { text = "MIT" }
maintainers = [
    { name = "Nicolas Carbone", email = "carbone.nicolas0@gmail.com" },
]
keywords = [
    "baseball",
    "stats",
    "data",
    "savant",
    "Baseball Savant",
    "Fangraphs",
    "MLB",
    "scraping",
    "sabermetrics",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
]

[project.urls]
Repository = "https://github.com/nico671/pybaseballstats"

[tool.uv.workspace]
members = ["pybaseballstats"]

[tool.uv.sources]
pybaseballstats = { workspace = true }
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "coverage>=7.6.12",
    "hypothesis>=6.127.1",
    "ipykernel>=6.29.5",
    "mypy>=1.18.2",
    "pytest>=8.3.4",
    "ruff>=0.9.7",
]

[tool.setuptools]
packages = { find = { where = ["src/"] } }

[tool.setuptools.package-data]
"pybaseballstats" = ["data/*.csv"]
